force-app/main/default/objects/leaseworks__LW_Action_Override_Config__mdt/leaseworks__LW_Action_Override_Config__mdt.object-meta.xml
<CustomObject>
    <description>Using this to define default field values on &quot;New&quot; action override through custom Aura component &quot;GenericActionOverrideCmp&quot;.</description>
    <label>LW Action Override Config</label>
    <pluralLabel>LW Action Override Configs</pluralLabel>
</CustomObject>