force-app/main/default/objects/leaseworks__LW_Action_Override_Config__mdt/fields/leaseworks__Description__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Description__c</fullName>
    <description>This field is to describe the use of the field mapping provided for the object.</description>
    <inlineHelpText>Provide a description for the field mapping provided for the Object.</inlineHelpText>
    <label>Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>