force-app/main/default/objects/leaseworks__LW_Action_Override_Config__mdt/fields/leaseworks__Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Field_Mapping__c</fullName>
    <description>To keep the default value for fields in the form of JSON.</description>
    <inlineHelpText>Please specify the default mappings for the fields. Eg: { &quot;FieldName__c&quot;: &quot;Value&quot; }</inlineHelpText>
    <label>Field Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>