force-app/main/default/objects/leaseworks__LW_Action_Override_Config__mdt/fields/leaseworks__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Object_API_Name__c</fullName>
    <description>To identify the object and record-type developer name.</description>
    <inlineHelpText>Please specify the object name for which you want the default mappings. If you need the mapping to be record-type specific add record-type developer name as well. Eg: Asset__c or Asset__c.Aircraft [Record-type specific]</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>